@@ -267,6 +267,12 @@ CVS code -
 	  consistency with the file browser. (DLR, suggested by Benno
 	  Schulenberg)
 	- Remove redundant key checks. (DLR)
+  help_line_len()
+	- Properly handle the case where we can't break the line of help
+	  text. (DLR)
+	- Wrap the line of help text at (COLS - 1) instead of
+	  (COLS - 8), for consistency. (DLR, suggested by Benno
+	  Schulenberg)
 - nano.c:
   print1opt_full()
 	- Rename to print_opt_full(), for consistency. (DLR)
